fix(theodore): Fixes text direction when default value for text-align is changed

--- a/theodore/src/component/Theodore.module.scss
+++ b/theodore/src/component/Theodore.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  text-align: initial;
 }
 
 .container {
